# mkdocs-typer2

./: .coverage  .gitignore  404.html  CHANGELOG.md  FUNDING.yml  README.md  codecov.yaml  coverage.xml  index.html  justfile  mkdocs.yaml  objects.inv  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-and-test.yml  docs.yml  publish.yml
changelog/: index.html
cli/: index.html
cli-pretty/: index.html
cli-pretty-legacy/: index.html
cli-pretty-native/: index.html
cli-termynal/: index.html
docs/: cli-pretty-legacy.md  cli-pretty-native.md  cli-pretty.md  cli-termynal.md  cli.md  index.md
search/: search_index.json
src/mkdocs_typer2/: __init__.py  cli.py  markdown.py  plugin.py  pretty.py  termynal_render.py
src/mkdocs_typer2/cli/: cli.py  sub_cli.py
tests/: test_cli.py  test_markdown.py  test_plugin.py  test_pretty.py  test_termynal_contract.py  test_termynal_directive.py  test_termynal_render.py
