[project]
name = "mkdocs-typer2"
version = "0.1.6"
description = "Mkdocs plugin for generating Typer CLI docs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mkdocs>=1.6.1", "pydantic>=2.9.2", "typer>=0.12.5"]

[project.scripts]
"mkdocs-typer2" = "mkdocs_typer2.cli:app"

[project.entry-points."mkdocs.plugins"]
"mkdocs-typer2" = "mkdocs_typer2:MkdocsTyper"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.42",
    "mkdocstrings[python]>=0.26.2",
    "mkdocs-typer>=0.0.3",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ipython>=8.28.0",
    "ipykernel>=6.29.5",
    "griffe>=1.5.1",
    "markdown-it-py>=3.0.0",
    "pydantic>=2.9.2",
]

[tool.pytest.ini_options]
addopts = "--cov=mkdocs_typer2 --cov-report=term-missing"

[tool.coverage.run]
source = ["mkdocs_typer2"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
]
