[project]
name = "mkdocs-typer2"
version = "0.3.0"
description = "Typer CLI docs for MkDocs (optional) and Zensical via Python-Markdown"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.3.6,<4",
    "pydantic>=2.9.2",
    "typer>=0.12.5",
]

[project.optional-dependencies]
mkdocs = ["mkdocs>=1.6.1,<2"]
zensical = ["zensical>=0.0.30,<1"]

[project.scripts]
"mkdocs-typer2" = "mkdocs_typer2.cli.cli:app"

[project.entry-points."mkdocs.plugins"]
"mkdocs-typer2" = "mkdocs_typer2:MkdocsTyper"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.5.42",
    "mkdocstrings[python]>=0.26.2",
    "mkdocs-typer>=0.0.3",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ipython>=8.28.0",
    "ipykernel>=6.29.5",
    "griffe>=1.5.1",
    "markdown-it-py>=3.0.0",
    "pydantic>=2.9.2",
    "zensical>=0.0.30,<1",
]

[tool.pytest.ini_options]
addopts = "--cov=mkdocs_typer2 --cov-report=term-missing"

[tool.coverage.run]
source = ["mkdocs_typer2"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
]
